# docs/swagger.json
@@ -715,10 +715,10 @@
         }
       }
     },
-    "/score/getRoundWiseScore": {
+    "/leaderboard/getRoundWiseScore": {
       "get": {
         "tags": [
-          "Score"
+          "leaderboard"
         ],
         "description": "Scores",
         "produces": [
@@ -767,10 +767,10 @@
         }
       }
     },
-    "/getRank": {
+    "/leaderboard/getRank": {
       "get": {
         "tags": [
-          "Rank"
+          "leaderboard"
         ],
         "description": "Rank",
         "produces": [
